[package]
name = "fuzon-http"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
actix-web = "4.9.0"
clap = { version = "4.5.18", features = ["derive"] }
fuzon = { version = "0.2.2", path = "../fuzon" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
