[package]
name = "fuzon-http"
version = "0.2.4"
license.workspace = true
edition.workspace = true

[dependencies]
actix-web = "4.9.0"
clap = { version = "4.5.18", features = ["derive"] }
env_logger = "0.11.5"
fuzon = { version = "0.2.4", path = "../fuzon" }
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
