[package]
name = "fuzon-http"
version = "0.4.0"
license.workspace = true
edition.workspace = true

[dependencies]
actix-web = "4.9.0"
apistos = { version = "0.4.1", features = ["scalar"] }
apistos-schemars = "0.8.21"
clap = { version = "4.5.18", features = ["derive"] }
env_logger = "0.11.5"
fuzon = { version = "0.4.0", path = "../fuzon" }
log = "0.4.22"
schemars = "0.8.21"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
